Update and rename cal.html to index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="calculator">
-        <input type="text" placeholder="Souvik & Rajarshi" class="name" id="inputBox">
+        <input type="text" placeholder="Souvik Modifed Calc  " class="name" id="inputBox">
         <div class="buttons">
             <button class="btn">AC</button>
             <button class="btn">C</button>
